--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,123 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+html, body{
+  width:100%;
+  height:100%;
+  font-size: 60%;
+  font-family: "urbanist";
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+p,li,input{
+  font-size: 1.5rem;
+  letter-spacing: 0.14rem;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+::placeholder{
+  font-family: "urbanist";
+  font-size: 1.4rem;
+  letter-spacing: 0.14rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+button, h1{
+font-family: "urbanist";
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.container{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+  width:100%;
+  background-color: #2d3436;
+  background-image: linear-gradient(310deg, #2d3436 0%, #000000 74%);
+}
+
+.todo-app{
+  width:100%;
+  max-width:50rem;
+  margin:10rem auto 2rem;
+  padding:4rem 3rem;
+  border-radius:1rem;
+  background:linear-gradient(to right, #ece9e6,#ffffff);
+  box-shadow: rgba(255,255,255,0.2) 0rem 0.2rem 1rem;
+}
+
+.todo-app h1{
+  color:#16032a;
+  display:flex;
+  align-items: center;
+  margin-bottom:2rem;
+  font-size: 3rem;
+}
+
+.row{
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+  border-radius: 3rem;
+  padding-left: 2rem;
+  margin-bottom: 2.5rem;
+  background-color: #f5f5f5;
+}
+ input{
+  flex:1;
+  border:none;
+  outline:none;
+  background-color: transparent;
+  padding: 1rem;
+  font-family: "urbanist";
+ }
+
+ button{
+  outline: none;
+  padding:1.6rem 5rem;
+  background-color: #2d3436;
+  color:#f5f5f5;
+  font-weight: 600;
+  border-radius: 4rem;
+  cursor:pointer;
+ }
+
+ .list-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+ }
+
+ul li{
+  list-style:none;
+  padding:1rem 8rem 1rem 5rem;
+  user-select:none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+  position: relative;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  gap:1.2rem;
+ }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+ ul li p{
+  font-size: 1.5rem;
+ }
+
+ ul li:hover{
+  background-color: rgb(234,2,2,0.1);
+ }
+
+ ul li .icon-style{
+  color:red;
+  font-size: 2rem;
+ }
+
+ ul li.checked{
+  color:#555;
+  text-decoration: line-through;
+ }
+
+ 
+
